--- a/.gitignore
+++ b/.gitignore
@@ -64,6 +64,8 @@ __pycache__/
 ../node_modules/
 ../root@192.168.111.100
 
+.db_test.py
+
  * Font Awesome Free 5.15.4 by @fontawesome - https://fontawesome.com
  * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
  */
