--- a/.gitignore
+++ b/.gitignore
@@ -61,7 +61,8 @@ __pycache__/
 ../root@192.168.111.100
 
 .db_test.py
-.secrets.json
+myproject/secrets/
+myproject/secrets/secrets.json
  * Font Awesome Free 5.15.4 by @fontawesome - https://fontawesome.com
  * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
  */
